# testcecw

./: .env.example  .gitignore  09-OBD_InsightBot_SE_Template (2).docx  ARCHITECTURE.txt  IMPLEMENTATION_PLAN.md  LOCAL_SPEECH_TO_TEXT_PLAN.md  PRODUCTION_READINESS_REPORT.md  README.md  TEST_REPORT.md  demo_log.csv  demo_log_2.csv  demo_log_3.csv  pyproject.toml  requirements.txt
scripts/: test_granite.py  test_ollama.py
src/: __init__.py  main.py
src/assets/: __init__.py
src/assets/backgrounds/: PROMPT_TEMPLATES.md
src/config/: __init__.py  logging_config.py  settings.py
src/models/: __init__.py  base.py  chat.py  user.py
src/prompts/: __init__.py  templates.py
src/services/: __init__.py  auth_service.py  chat_service.py  granite_client.py  granite_speech_engine.py  obd_parser.py  rag_pipeline.py  severity_classifier.py  voice_service.py
src/ui/: __init__.py  chat_screen.py  login_screen.py  main_window.py  styles.py
src/utils/: __init__.py  health_check.py  helpers.py  validators.py
tests/: __init__.py  conftest.py  test_auth.py  test_chat_service.py  test_granite_client.py  test_granite_speech_engine.py  test_obd_parser.py  test_rag_pipeline.py  test_severity_classifier.py  test_validators.py
tests/fixtures/sample_obd_logs/: critical_issues.csv  healthy_vehicle.csv  vehicle_with_faults.csv
